--- a/computeservice/src/main/resources/templates/NewFile.html
+++ b/computeservice/src/main/resources/templates/NewFile.html
@@ -29,10 +29,10 @@ $(function(){
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							 <a href="#">Link</a>
+							 <a href="#">共赢普惠</a>
 						</li>
 						<li>
-							 <a href="#">Link</a>
+							 <a href="#">共赢普惠</a>
 						</li>
 						<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
@@ -54,7 +54,7 @@ $(function(){
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">One more separated link</a>
+									 <a href="#">共赢普惠</a>
 								</li>
 							</ul>
 						</li>
